fix: navigation overlapping content

--- a/css/components/_homepage.scss
+++ b/css/components/_homepage.scss
@@ -6,6 +6,7 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+    padding-top: 65px;
     padding-left: 10%;
     padding-right: 10%;
 
